# reddit-monitor-app

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml  fly.toml  pyproject.toml  server.py  vercel.json
.github/workflows/: monitor.yml
api/: analyze.py
data/: monitor_state.json  reddit_monitoring_plan.md
data/reports/: 2026-02-18.md  latest.md
docs/: dev-decisions.md  index.html  report.md  style.css
